--- a/kp.html
+++ b/kp.html
@@ -2,6 +2,6 @@
     <head>
     </head>
     <body>
-        <h1> MY NAME IS KABITA </h1>
+        <h1> MY NAME IS KABITA parajuli </h1>
     </body>
 </html>
